[gd_scene load_steps=6 format=3 uid="uid://cylcyp6y0r4b"]

[ext_resource type="Script" path="res://src/scripts/main.gd" id="1_ttp6j"]
[ext_resource type="Script" path="res://src/scripts/responsive_helper.gd" id="2_cifph"]
[ext_resource type="Theme" uid="uid://coy32dn4ayweq" path="res://src/themes/fibonacci.tres" id="2_u0adm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4p7q1"]
bg_color = Color(0, 0.243137, 0.141176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mrt5p"]
bg_color = Color(0, 0, 0, 1)

[node name="FibonacciMain" type="Node2D"]
script = ExtResource("1_ttp6j")

[node name="Panel" type="Panel" parent="."]
theme = ExtResource("2_u0adm")
script = ExtResource("2_cifph")
alignment = "Full alignment"

[node name="TopButtonsPanel" type="Panel" parent="."]
offset_right = 640.0
offset_bottom = 24.0
theme = ExtResource("2_u0adm")
theme_override_styles/panel = SubResource("StyleBoxFlat_4p7q1")
script = ExtResource("2_cifph")
alignment = "Vertical alignment"

[node name="TopButtons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 24.0
script = ExtResource("2_cifph")
alignment = "Vertical alignment"

[node name="RestoreWindowSizeButton" type="Button" parent="TopButtons"]
layout_mode = 0
offset_left = 612.0
offset_top = 2.0
offset_right = 638.0
offset_bottom = 30.0
theme = ExtResource("2_u0adm")
text = "‚ùí "
script = ExtResource("2_cifph")
to_the_right = true

[node name="FibonacciSequence" type="RichTextLabel" parent="."]
offset_top = 24.0
offset_right = 640.0
offset_bottom = 407.0
theme = ExtResource("2_u0adm")
theme_override_styles/normal = SubResource("StyleBoxFlat_mrt5p")
text = " 0 "
shortcut_keys_enabled = false
script = ExtResource("2_cifph")
alignment = "Full alignment"
set_custom_margin = true
custom_top_margin = 24
custom_bottom_margin = 102

[node name="ButtonsBackgroundLabel" type="Panel" parent="."]
offset_top = 407.0
offset_right = 640.0
offset_bottom = 480.0
theme = ExtResource("2_u0adm")
script = ExtResource("2_cifph")
alignment = "Vertical alignment"
to_the_bottom = true

[node name="NumberAreaTextEdit" type="TextEdit" parent="ButtonsBackgroundLabel"]
layout_mode = 0
offset_top = 2.0
offset_right = 640.0
offset_bottom = 40.0
theme = ExtResource("2_u0adm")
context_menu_enabled = false
shortcut_keys_enabled = false
wrap_mode = 1
caret_blink = true
script = ExtResource("2_cifph")
alignment = "Vertical alignment"

[node name="BottomButtons" type="Control" parent="."]
layout_direction = 1
layout_mode = 3
anchors_preset = 0

[node name="GenerateButton" type="Button" parent="BottomButtons"]
layout_mode = 0
offset_top = 449.0
offset_right = 153.0
offset_bottom = 480.0
theme = ExtResource("2_u0adm")
text = "Generate fibonacci
"
script = ExtResource("2_cifph")
to_the_bottom = true

[node name="ClearButton" type="Button" parent="BottomButtons"]
layout_mode = 0
offset_left = 155.0
offset_top = 449.0
offset_right = 203.0
offset_bottom = 480.0
theme = ExtResource("2_u0adm")
text = "Clear"
script = ExtResource("2_cifph")
to_the_bottom = true

[node name="WarningText" type="RichTextLabel" parent="."]
layout_direction = 2
offset_left = 213.0
offset_top = 454.0
offset_right = 640.0
offset_bottom = 480.0
focus_mode = 2
theme = ExtResource("2_u0adm")
bbcode_enabled = true
text = "Lorem ipsum dolor..."
selection_enabled = true
script = ExtResource("2_cifph")
to_the_bottom = true

[connection signal="pressed" from="TopButtons/RestoreWindowSizeButton" to="." method="_on_restore_window_size_button_pressed"]
[connection signal="pressed" from="BottomButtons/GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="pressed" from="BottomButtons/ClearButton" to="." method="_on_clear_button_pressed"]
